# anki-ogg-2-mp3-converter

./: .gitignore  Cargo.toml  README.md  config.json  convertogg2mp3.ps1  package-lock.json  package.json  runhidden.vbs  tsconfig.json
convert/: package.json  tsconfig.json
convert/src/: index.ts
convertogg2mp3/: convertogg2mp3.ps1  run.bat
src/: error.rs  helper.rs  index.ts  main.rs  mining.ts
watch-mining-dev/: .gitignore  package-lock.json  package.json  watch-mining.js
