[package]
name = "convert-ogg-mp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
num_cpus = { version = "1.16.0" }
futures = { version = "0.3.30" }
walkdir = { version = "2.5.0" }
winapi = { version = "0.3.9" }
thiserror = "1.0.61"
promptuity = "0.0.5"
time = { version = "0.3.36", features = ["local-offset"] }
